feat: support chinese language, and refine prompts
Signed-off-by: Neo <128671186+smallpigss@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ htmlcov/
 
 # For Macs Dev Environs: ignoring .Desktop Services_Store
 .DS_Store
+
+logs/
+redis-data/
+scripts/auto_gpt_workspace/
