--- a/.env.template
+++ b/.env.template
@@ -109,3 +109,5 @@ USE_MAC_OS_TTS=False
 ELEVENLABS_API_KEY=your-elevenlabs-api-key
 ELEVENLABS_VOICE_1_ID=your-voice-id-1
 ELEVENLABS_VOICE_2_ID=your-voice-id-2
+
+LANGUAGE=CN
