--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,18 @@
 version: "3.9"
 
 services:
-  auto-gpt:
-    depends_on:
-      - redis
-    build: ./
-    volumes:
-      - "./scripts:/app"
-      - ".env:/app/.env"
-    profiles: ["exclude-from-up"]
+#  auto-gpt:
+#    depends_on:
+#      - redis
+#    build: ./
+#    volumes:
+#      - "./scripts:/app"
+#      - ".env:/app/.env"
+#    profiles: ["exclude-from-up"]
 
   redis:
     image: "redis/redis-stack-server:latest"
+    volumes:
+      - ./redis-data:/data
+    ports:
+      - "6379:6379"
